# tap-leaflink

./: .env.example  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/: renovate.json5
.github/workflows/: build.yml  test.yml  update_catalog.yml
scripts/: scrape_openapi_spec.py
tap_leaflink/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_leaflink/openapi/: __init__.py  openapi.json
tests/: __init__.py  conftest.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[batches].json  test_catalog_changes[brands].json  test_catalog_changes[buyer_orders].json  test_catalog_changes[companies].json  test_catalog_changes[company_staff].json  test_catalog_changes[contacts].json  test_catalog_changes[customers].json  test_catalog_changes[inventory_items].json  test_catalog_changes[license_types].json  test_catalog_changes[licenses].json  test_catalog_changes[line_items].json  test_catalog_changes[order_event_logs].json  test_catalog_changes[order_payments].json  test_catalog_changes[order_sales_reps].json  test_catalog_changes[orders_received].json  test_catalog_changes[product_categories].json  test_catalog_changes[products].json
