[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1,<2",
]

[project]
name = "tap-leaflink"
version = "0.0.1"
description = "Singer tap for LeafLink, built with the Meltano Singer SDK."
readme = "README.md"
keywords = [
  "ELT",
  "LeafLink",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests~=2.34.2",
  "singer-sdk~=0.55.0a1",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.optional-dependencies]
s3 = [
  "s3fs>=2026.1",
]
[project.scripts]
# CLI declaration
tap-leaflink = "tap_leaflink.tap:TapLeafLink.cli"

[dependency-groups]
dev = [
  { include-group = "scrape" },
  { include-group = "test" },
]
test = [
  "pytest>=9",
  "pytest-github-actions-annotate-failures>=0.3",
  "singer-sdk[testing]",
  "syrupy>=4",
]
scrape = [
  "beautifulsoup4>=4.12",
  "rich>=13",
]
typing = [
  "mypy>=2.1",
  "ty>=0.0.50",
]

[tool.ruff]
required-version = ">=0.13"
line-length = 100
preview = true
[tool.ruff.lint]
future-annotations = true
ignore = [
  "COM812", # missing-trailing-comma
]
select = [ "ALL" ]
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [ "S101" ]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.typos.files]
extend-exclude = [ "tap_leaflink/openapi/openapi.json", "tests/__snapshots__/test_schema_evolution/*.json" ]

[tool.mypy]
warn_unused_ignores = true
warn_unreachable = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_unused_configs = true

[tool.pytest]
addopts = [
  "--durations=10",
]
minversion = "9.0"

# This configuration can be used to customize tox tests as well as other test frameworks like flake8 and mypy
[tool.tox]
requires = [
  "tox>=4.55",
  "tox-uv>=1.35",
]
env_list = [
  "py314",
  "py313",
  "py312",
  "typing",
]
[tool.tox.env.typing]
dependency_groups = [ "test", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_leaflink", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_leaflink", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
base_python_file = [ ".python-version" ]
dependency_groups = [ "test" ]
pass_env = [
  "GITHUB_*",
  "TAP_LEAFLINK_*",
]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
